<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <View
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:background="@color/gray_enabled"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnOne"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/keyboard_out_padding"
        android:layout_marginStart="@dimen/keyboard_out_padding"
        android:contentDescription="@string/one"
        android:tag="@string/one"
        android:text="@string/one"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnTwo"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnTwo"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/keyboard_in_horizontal_padding"
        android:contentDescription="@string/two"
        android:tag="@string/two"
        android:text="@string/two"
        app:layout_constraintTop_toTopOf="@id/btnOne"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintEnd_toStartOf="@id/btnThree"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnThree"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/keyboard_in_horizontal_padding"
        android:contentDescription="@string/three"
        android:tag="@string/three"
        android:text="@string/three"
        app:layout_constraintTop_toTopOf="@id/btnOne"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintEnd_toStartOf="@id/btnBack"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="@dimen/keyboard_out_padding"
        android:layout_marginStart="@dimen/keyboard_in_horizontal_padding"
        android:contentDescription="@string/three"
        app:layout_constraintTop_toTopOf="@id/btnOne"
        app:layout_constraintStart_toEndOf="@id/btnThree"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_backspace"
        android:elevation="3dp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="@id/btnBack"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnFour"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/keyboard_in_vertical_padding"
        android:layout_marginStart="@dimen/keyboard_out_padding"
        android:contentDescription="@string/four"
        android:tag="@string/four"
        android:text="@string/four"
        app:layout_constraintTop_toBottomOf="@id/btnOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnFive"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnFive"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/keyboard_in_horizontal_padding"
        android:contentDescription="@string/five"
        android:tag="@string/five"
        android:text="@string/five"
        app:layout_constraintTop_toTopOf="@id/btnFour"
        app:layout_constraintStart_toEndOf="@id/btnFour"
        app:layout_constraintEnd_toStartOf="@id/btnSix"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnSix"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/keyboard_in_horizontal_padding"
        android:contentDescription="@string/six"
        android:tag="@string/six"
        android:text="@string/six"
        app:layout_constraintTop_toTopOf="@id/btnFour"
        app:layout_constraintStart_toEndOf="@id/btnFive"
        app:layout_constraintEnd_toStartOf="@id/btnAllDelete"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnAllDelete"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="전체\n삭제"
        android:textSize="14sp"
        android:lineSpacingExtra="3sp"
        android:layout_marginStart="@dimen/keyboard_in_horizontal_padding"
        android:layout_marginEnd="@dimen/keyboard_out_padding"
        android:contentDescription="@string/three"
        app:layout_constraintTop_toTopOf="@id/btnFour"
        app:layout_constraintStart_toEndOf="@id/btnSix"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnSeven"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/keyboard_in_vertical_padding"
        android:layout_marginStart="@dimen/keyboard_out_padding"
        android:contentDescription="@string/seven"
        android:tag="@string/seven"
        android:text="@string/seven"
        app:layout_constraintTop_toBottomOf="@id/btnFour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEight"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnEight"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/keyboard_in_horizontal_padding"
        android:contentDescription="@string/eight"
        android:tag="@string/eight"
        android:text="@string/eight"
        app:layout_constraintTop_toTopOf="@id/btnSeven"
        app:layout_constraintStart_toEndOf="@id/btnSeven"
        app:layout_constraintEnd_toStartOf="@id/btnNine"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnNine"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/keyboard_in_horizontal_padding"
        android:contentDescription="@string/nine"
        android:tag="@string/nine"
        android:text="@string/nine"
        app:layout_constraintTop_toTopOf="@id/btnSeven"
        app:layout_constraintStart_toEndOf="@id/btnEight"
        app:layout_constraintEnd_toStartOf="@id/btnNone2"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnNone2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/keyboard_in_horizontal_padding"
        android:layout_marginEnd="@dimen/keyboard_out_padding"
        android:contentDescription="@string/three"
        android:enabled="false"
        android:backgroundTint="@color/gray_enabled"
        app:layout_constraintTop_toTopOf="@id/btnSeven"
        app:layout_constraintStart_toEndOf="@id/btnNine"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnZero"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/keyboard_in_vertical_padding"
        android:layout_marginStart="@dimen/keyboard_out_padding"
        android:layout_marginBottom="@dimen/keyboard_out_padding"
        android:contentDescription="@string/zero"
        android:tag="@string/zero"
        android:text="@string/zero"
        app:layout_constraintTop_toBottomOf="@id/btnSeven"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnHundred" />

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnHundred"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/keyboard_in_horizontal_padding"
        android:contentDescription="@string/hundred"
        android:tag="@string/hundred"
        android:text="@string/hundred"
        app:layout_constraintTop_toTopOf="@id/btnZero"
        app:layout_constraintBottom_toBottomOf="@id/btnZero"
        app:layout_constraintStart_toEndOf="@id/btnZero"
        app:layout_constraintEnd_toStartOf="@id/btnThousand"/>

    <Button
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnThousand"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/keyboard_in_horizontal_padding"
        android:contentDescription="@string/thousand"
        android:tag="@string/thousand"
        android:text="@string/thousand"
        app:layout_constraintTop_toTopOf="@id/btnZero"
        app:layout_constraintBottom_toBottomOf="@id/btnZero"
        app:layout_constraintStart_toEndOf="@id/btnHundred"
        app:layout_constraintEnd_toStartOf="@id/btnNext"/>

    <com.google.android.material.button.MaterialButton
        style="@style/App.Button.NumberPad"
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/keyboard_in_horizontal_padding"
        android:layout_marginEnd="@dimen/keyboard_out_padding"
        android:contentDescription="@string/complete"
        android:textSize="14sp"
        android:tag="@string/complete"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:backgroundTint="@color/sky_blue"
        app:rippleColor="@color/sky_blue_ripple"
        app:layout_constraintTop_toTopOf="@id/btnZero"
        app:layout_constraintBottom_toBottomOf="@id/btnZero"
        app:layout_constraintStart_toEndOf="@id/btnThousand"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>